# caravel-hal

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: gpio.rs  housekeeping_spi.rs  interrupts.rs  lib.rs  timer.rs  timer0.rs  uart.rs  user_io.rs  wishbone.rs
